# deps_nss

./: CMakeLists.txt
resources/: ojdkbuild_nss.def  pkg-config.in
resources/certdata/: readme.txt
resources/nspr_4108_cmake/: CMakeLists.txt
resources/nspr_411_cmake/: CMakeLists.txt
resources/nspr_cmake/: CMakeLists.txt
resources/nspr_include/: _pr_bld.h
resources/nss_3191_cmake/: CMakeLists.txt
resources/nss_321_cmake/: CMakeLists.txt
resources/nss_322_cmake/: CMakeLists.txt
resources/nss_cmake/: CMakeLists.txt
test/: CMakeLists.txt  nss_test.cpp
